--- a/package.json
+++ b/package.json
@@ -47,11 +47,11 @@
   ],
   "typings": "./index.d.ts",
   "dependencies": {
-    "crypto-js": "3.1.9-1",
+    "crypto-js": "^3.1.9-1",
     "lodash": "4.17.4",
     "prop-types": "15.5.10",
     "react-native-clcasher": "1.0.0",
-    "react-native-fetch-blob": "0.10.8",
+    "rn-fetch-blob": "0.10.15",
     "url-parse": "1.1.9"
   },
   "devDependencies": {
